[package]
name = "mkenv"
version = "0.1.8"
edition = "2021"
authors = ["Ahmad Baalbaky <ahmadjfbky@gmail.com>"]
description = "Lightweight yet useful macro for capturing the environment context at startup"
repository = "https://github.com/ahmadbky/mkenv"
license = "MIT"
keywords = ["cli", "macro", "utility"]
categories = ["accessibility", "value-formatting", "development-tools"]

[dependencies]

[dev-dependencies]
itertools = "0.14.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]
