[package]
name = "mkenv"
version = "1.0.0"
edition = "2024"
authors = ["Ahmad Baalbaky <ahmadjfbky@gmail.com>"]
description = "Lightweight yet useful library to help you define the environment your app needs"
repository = "https://github.com/ahmadbky/mkenv"
license = "MIT"
keywords = ["macro", "utility"]
categories = ["accessibility", "value-formatting", "development-tools"]
rust-version = "1.92.0"

[dependencies]

[dev-dependencies]
itertools = "0.14.0"

[features]
default = []
nightly = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "-Zunstable-options", "-Zrustdoc-scrape-examples"]

[[example]]
name = "simple"
doc-scrape-examples = true
