[package]
name = "mkenv"
version = "1.0.2"
edition = "2024"
authors = ["Ahmad Baalbaky <ahmadjfbky@gmail.com>"]
description = "Lightweight yet useful library to help you define the environment your app needs"
repository = "https://github.com/ahmadbky/mkenv"
license = "MIT"
keywords = ["macro", "utility"]
categories = ["accessibility", "value-formatting", "development-tools"]
rust-version = "1.92.0"

[dependencies]

[dev-dependencies]
itertools = "0.14.0"

[features]
default = []
nightly = []

[package.metadata.docs.rs]
all-features = true
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
rustdoc-args = ["--generate-link-to-definition"]

[[example]]
name = "simple"
doc-scrape-examples = true
